# gumtrace

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_ios.sh  example.js  example_ios.js  log2.txt  nsllog.txt
.github/workflows/: ci.yml
libs/: FridaGum-Android-17.8.3.h  FridaGum-IOS-17.8.3.h
src/: CallbackContext.cpp  CallbackContext.h  FuncPrinter.cpp  FuncPrinter.h  GumTrace.cpp  GumTrace.h  Utils.cpp  Utils.h  main.cpp  platform.h
src/taint/: CMakeLists.txt  TaintEngine.cpp  TaintEngine.h  TaintTracker.1sc  TraceParser.cpp  TraceParser.h  main.cpp
